src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Custom Flip Card Utilities */
.perspective {
    perspective: 1000px;
  }
  
  .backface-hidden {
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
  }
  
  .rotate-y-180 {
    transform: rotateY(180deg);
  }
  
  .transform-style-preserve-3d {
    transform-style: preserve-3d;
  }
  
  .monsieur-la-doulaise-regular {
    font-family: "Monsieur La Doulaise", cursive;
    font-weight: 400;
    font-style: normal;
  }

